# generic-cache

./: Cargo.toml  README.md
examples/: quick_example.rs
src/: builder.rs  entry.rs  lib.md  lib.rs  size.rs  util.rs
src/cache/: cache_entry.rs  config.rs  main_task.rs  mod.rs  task.rs
