[package]
name = "generic-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
futures = "^0.3.17"
futures-timer = "^3.0.2"
pretty_env_logger = "0.4"

tokio = { version = "1.13", features = ["rt", "rt-multi-thread", "macros"], optional = true }
async-std = { version = "^1.10", optional = true }
serde = { version = "^1.0", features = ["derive"] , optional = true }

[features]
default = ["all"]
all = ["tokio", "async-std", "serde"]
